# understanding-deep-learning-practice

./: .gitignore  README.md  pyproject.toml
ch10_cnn/: 1_implement_cnn_numpy.py  __init__.py  cnn_comparison.ipynb  cnn_vs_dw_plus_pw.ipynb  core_concepts.ipynb  core_concepts.py  implement_cnn_torch.py  rf_check.ipynb
ch11_residual_networks/: __init__.py  compare.ipynb  config.py  factories.py  gradient_utils.py  nobn.ipynb  post.ipynb  pre.ipynb  resnet20.py  trainer.py  trainer_utils.py  vanishing_gradients.ipynb
ch11_residual_networks/configs/: base.yaml  no_batchnorm.yaml  post_activation.yaml  pre_activation.yaml
ch5_loss_functions/: __init__.py
ch5_loss_functions/decision_boundaries/: experiment.py  model.py  training.py  visualize.py
ch5_loss_functions/imbalance/: experiment.py  imbalance.py  losses.py  metrics.py  model.py  train.py
ch5_loss_functions/losses/: experiment.py  model.py  train.py  vizualise.py
ch6_optimization/: __init__.py
ch6_optimization/exercise1_lr_range_test/: experiment.py  lr_finder.py  visualize.py
ch6_optimization/exercise2_sgd_vs_adamw/: experiment.py  model.py  visualize.py
ch6_optimization/exercise3_batch_size/: experiment.py  model.py  visualize.py
ch6_optimization/exercise4_momentum/: expriment.py  model.py  visualize.py
ch7_init_activation_norm/: __init__.py
ch7_init_activation_norm/exercise1_stability_sweep/: experiment.py  model.py  visualize.py
ch7_init_activation_norm/exercise2_normalization/: experiment.py  model.py  visualize.py
tests/: __init__.py  conftest.py
udl/: __init__.py
(+10 files in other folders)
